--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,8 +4,8 @@
 /*! === VARIABLES === */
 :root {
   --light-clr: #fff;
-  --light-clr-2: #BED2C9;
-  --light-clr-3: #E1E7DD;
+  --light-clr-2: #bed2c9;
+  --light-clr-3: #e1e7dd;
   --dark-clr: #2e2e2e;
   --body-font-clr: #bdbdbd;
   --body-bg-clr: #222222;
@@ -24,7 +24,7 @@
 
 html {
   font-size: 62.5%;
-/* scroll-behavior: smooth; */
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -74,48 +74,48 @@ button {
 }
 
 /*! === COMPONENTS === */
-.container{
+.container {
   margin-inline: auto;
   padding-inline: 1.8rem;
 }
 
- .btn{
+.btn {
   display: inline-block;
   cursor: pointer;
-  transition: opacity .25s;
- }
+  transition: opacity 0.25s;
+}
 
- .btn:is(:hover, :focus){
-  opacity: .8;
- }
+.btn:is(:hover, :focus) {
+  opacity: 0.8;
+}
 
- .btn--action{
+.btn--action {
   font-size: 1.8rem;
   color: var(--light-clr);
   line-height: 0;
- }
+}
 
- .btn--text{
+.btn--text {
   font-family: var(--title-font);
   left: 1px;
   font-size: 2rem;
   padding: 1rem 3rem;
- }
+}
 
- .btn--transparent{
+.btn--transparent {
   color: var(--light-clr);
   border-bottom: 2px solid var(--light-clr);
   padding: 0;
- }
+}
 
- .title{
+.title {
   font-family: var(--title-font);
   color: var(--light-clr-3);
   letter-spacing: 1px;
   font-size: 3.6rem;
- }
+}
 
- .title-main{
+.title-main {
   font-size: clamp(4.2rem, 8vw, 10rem);
   line-height: 1.2;
   background: url(../images/showcase_image_lg.png) center 37% no-repeat;
@@ -124,39 +124,49 @@ button {
   -webkit-background-clip: text;
   color: transparent;
   position: relative;
-  z-index: 10; 
- }
+  z-index: 10;
+}
+
+.section-metadata {
+  padding-bottom: 6rem;
+  text-align: center;
+}
+
+.section-metadada_desription{
+  margin-top: 1.3rem;
+}
+
 /*! === HEADER === */
-.header{
+.header {
   position: fixed;
   z-index: 999;
   width: 100%;
   padding-top: 3rem;
   padding-bottom: 1rem;
   background-color: var(--body-bg-clr);
-  transition: padding .25s;
+  transition: padding 0.25s;
 }
 
-.header.active{
+.header.active {
   padding-top: 1rem;
-  box-shadow: 0 1px 0 rgba(255, 255, 255, .1);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
 }
 
-.navbar{
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.navbar_logo{
+.navbar_logo {
   margin-right: 2.5rem;
 }
 
-.navbar_logo-image{
+.navbar_logo-image {
   min-width: 10.2rem;
 }
 
-.navbar_menu{
+.navbar_menu {
   position: absolute;
   top: 0;
   left: 0;
@@ -165,62 +175,83 @@ button {
   background-color: var(--dark-clr);
   transform: translateX(-26rem);
   z-index: 999;
-  transition: transform .5s ease-in; 
+  transition: transform 0.5s ease-in;
 }
 
-.navbar_menu.active{
+.navbar_menu.active {
   transform: translateX(0);
 }
 
-.navbar_list{
+.navbar_list {
   display: flex;
   flex-direction: column;
 }
 
-.navbar_list-item{
-  border-bottom: 1px solid rgba(255, 255, 255, .1);
+.navbar_list-item {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.navbar_list-item:last-of-type{
+.navbar_list-item:last-of-type {
   border-bottom: none;
 }
 
-.navbar_list-link{
+.navbar_list-link {
   display: block;
   color: var(--light-clr);
   padding: 1rem;
-  transition: opacity .25s;
+  transition: opacity 0.25s;
 }
 
-.navbar_list-link:is(:hover, :focus){
-  opacity: .5;
+.navbar_list-link:is(:hover, :focus) {
+  opacity: 0.5;
 }
 
-.navbar_btn-group{
+.navbar_btn-group {
   display: flex;
   column-gap: 1.5rem;
 }
 /*! === MAIN = == */
-main{
+main {
   overflow-x: hidden;
 }
 /*! === SHOWCASE === */
-.showcase{
+.showcase {
   padding-top: 14.5rem;
 }
 
-.showcase_container{
+.showcase_container {
   text-align: center;
 }
 
-.showcase_image{
+.showcase_image {
   display: inline-block;
   transform: translateY(-3rem);
 }
-/*! === PORTFOLIO === */ 
+/*! === PORTFOLIO === */
+.portfolio {
+  padding-top: 7.4rem;
+  padding-bottom: 12rem;
+}
 
+.portfolio_metadata {
+  padding-bottom: 4rem;
+  text-align: left;
+}
 /* --- SWIPER --- */
+.swiper-slide{
+  width: 30rem;
+  height: 30rem;
+}
 
+.swiper-slide img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
+.swiper-pagination-bullet{
+  background-color: var(--light-clr-2);
+}
 /*! === SERVICES === */
 
 /*! === ABOUT === */
@@ -231,10 +262,13 @@ main{
 
 /*! === MEDIA QUERIES === */
 /* --- Phones --- */
-@media (min-width: 31.25em) {}
+@media (min-width: 31.25em) {
+}
 
 /* --- Tablets --- */
-@media (min-width: 48em) {}
+@media (min-width: 48em) {
+}
 
 /* --- Laptops/Desktops --- */
-@media (min-width: 64em) {}
+@media (min-width: 64em) {
+}
