--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,8 +132,13 @@ button {
   text-align: center;
 }
 
-.section-metadada_desription{
+.section-metadada_desription {
   margin-top: 1.3rem;
+}
+
+.btn-green{
+  background-color: var(--light-clr-2);
+  color: var(--dark-clr);
 }
 
 /*! === HEADER === */
@@ -238,24 +243,93 @@ main {
   text-align: left;
 }
 /* --- SWIPER --- */
-.swiper-slide{
+.swiper-slide {
   width: 30rem;
   height: 30rem;
 }
 
-.swiper-slide img{
+.swiper-slide img {
   width: 100%;
   height: 100%;
-  object-fit: cover; 
+  object-fit: cover;
 }
 
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   background-color: var(--light-clr-2);
 }
 /*! === SERVICES === */
+.services {
+  background-color: var(--dark-clr);
+  padding-block: 7.4rem;
+}
 
+.services_container {
+  display: grid;
+}
+
+.services_image-wraper {
+  margin-bottom: 6rem;
+}
+
+.services-image-wraper img {
+  margin-inline: auto;
+}
+
+.services_list,
+.services_list-divider {
+  display: grid;
+  gap: 5rem;
+}
+
+.services_list-icon {
+  display: inline-block;
+  font-size: 3.6rem;
+  line-height: 3rem;
+  margin-bottom: 3rem;
+}
+
+.services_list-title {
+  margin-bottom: 1rem;
+}
 /*! === ABOUT === */
+.about {
+  padding-top: 12rem;
+  padding-bottom: 6rem;
+}
 
+.about_container {
+  display: grid;
+  gap: 8rem;
+}
+
+.about_information-title {
+  margin-bottom: 2rem;
+}
+
+.about_information-description:first-of-type {
+  margin-bottom: 1.5rem;
+}
+
+.about_information-description:last-of-type {
+  margin-bottom: 4rem;
+}
+
+.about_images{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  margin-inline: auto;
+}
+
+.about_images-image--top{
+  grid-column: 4/-1;
+  grid-row: 1/span 4;
+}
+
+.about_images-image--bottom{
+  grid-column: 1/7;
+  grid-row: 3/span 5;
+  z-index: 5;
+}
 /*! === BLOG === */
 
 /*! === FOOTER === */
