--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,7 +136,7 @@ button {
   margin-top: 1.3rem;
 }
 
-.btn-green{
+.btn-green {
   background-color: var(--light-clr-2);
   color: var(--dark-clr);
 }
@@ -314,54 +314,100 @@ main {
   margin-bottom: 4rem;
 }
 
-.about_images{
+.about_images {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   margin-inline: auto;
 }
 
-.about_images-image--top{
+.about_images-image--top {
   grid-column: 4/-1;
-  grid-row: 1/span 4;
+  grid-row: 1 / span 4;
 }
 
-.about_images-image--bottom{
+.about_images-image--bottom {
   grid-column: 1/7;
-  grid-row: 3/span 5;
+  grid-row: 3 / span 5;
   z-index: 5;
 }
 /*! === BLOG === */
-.blog{
+.blog {
   padding-top: 4rem;
   padding-bottom: 12rem;
 }
 
-.blog_container{
+.blog_container {
   display: grid;
 }
 
-.blog_metadata-description{
+.blog_metadata-description {
   margin-bottom: 4rem;
 }
 
-.blog_post:first-of-type{
+.blog_post:first-of-type {
   margin-bottom: 6rem;
 }
 
-.blog_post-image{
+.blog_post-image {
   margin-bottom: 3rem;
 }
 
-.blog_post-image img{
+.blog_post-image img {
   margin-inline: auto;
 }
 
-.blog_post-title{
+.blog_post-title {
   font-size: 2.6rem;
   margin-bottom: 2rem;
 }
 /*! === FOOTER === */
+.footer {
+  background-color: var(--dark-clr);
+  padding-top: 10rem;
+  padding-bottom: 3rem;
+}
+.footer_group {
+  text-align: center;
+}
 
+.footer_title {
+  margin-bottom: 3rem;
+}
+
+.footer_separator {
+  display: block;
+  height: 1px;
+  background-color: var(--light-clr);
+  margin-top: 10rem;
+  margin-bottom: 8rem;
+}
+
+.footer_logo {
+  display: inline-block;
+}
+
+.footer_description {
+  margin-bottom: 3rem;
+}
+
+.footer_list {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+}
+
+.footer_list-link{
+  color: var(--light-clr-2);
+  font-size: 1.8rem;
+  width: 4rem;
+  height: 4rem;
+  border: 1px solid rgba(255, 255, 255, .1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color .25s;
+}
 /*! === MEDIA QUERIES === */
 /* --- Phones --- */
 @media (min-width: 31.25em) {
